@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.3.5) unstable; urgency=low
 
   * widget-http: don't check content-type in frame parents
+  * istream-subst: allow null bytes in the input stream
 
  --
 
